welcome.lessons.welcome.loopfor.LoopStairs.scala.code
while (!estFaceMur()) avance();

while(estFaceMure)
{
	gauche();
	avance();
	droite();
	avance();
}

avance(3);
